Added posts back.

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,10 +1,16 @@
 title = 'kengru'
 theme = 'hugo-theme-monochrome'
+author = "kengru"
 
 baseURL = 'https://kengru.do/'
-languageCode = 'en-us'
+languageCode = 'en'
+defaultContentLanguage = 'en'
 
 googleAnalytics = 'G-KN214PWPJQ'
+
+# Enabling
+enableEmoji = true
+enable_zooming_js = true
 
 # Menu
 
