--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -1,5 +1,5 @@
-[[navbar]]
-  identifier = "frequents"
-  name = "Frequents"
-  url = "/en/frequents/"
-  weight = 1
+# [[navbar]]
+#   identifier = "frequents"
+#   name = "Frequents"
+#   url = "/en/frequents/"
+#   weight = 1
