--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-.hugo_build.lock
-favicon.ico:
+# Generated files by hugo
 /public/
+/resources/_gen/
+/assets/jsconfig.json
+hugo_stats.json
+
+# Executable may be added to repository
+hugo.exe
+hugo.darwin
+hugo.linux
+
+# Temporary lock file while building
+/.hugo_build.lock
+
+favicon.ico:
