Almost done with the second Rust devlog.

--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -2,4 +2,9 @@
   identifier = "devlogs"
   name = "Devlogs"
   url = "/devlogs/"
-  weight = 3
+  weight = 1
+[[navbar]]
+  identifier = "frequents"
+  name = "Frequents"
+  url = "/es/frequents/"
+  weight = 2
