Started initial customization.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "version": "3.0.0",
+  "name": "kengru",
+  "version": "3.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
